--- a/SherpaDesk/AddTicket.xaml
+++ b/SherpaDesk/AddTicket.xaml
@@ -80,7 +80,7 @@
             </Grid.ColumnDefinitions>
 
             <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="0" TextWrapping="Wrap" Text="End User" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <ComboBox x:Name="EndUserList" Grid.Column="3" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,3,0,0" VerticalAlignment="Top">
+            <ComboBox x:Name="EndUserList" Grid.Column="3" Grid.Row="0" FontSize="24" HorizontalAlignment="Left" Width="450" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
                 <ComboBoxItem />
                 <ComboBoxItem Name="EndUserMe" />
                 <ComboBoxItem Content="Make Me the User" Name="MakeMe" Foreground="#FF0B0078"/>
@@ -107,11 +107,11 @@
             <HyperlinkButton x:Name="AlternateTechMeLink" Content="Me" Grid.Row="5" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Top" FontSize="24" Foreground="White" Height="51" FontWeight="Normal" Click="AlternateTechMeLink_Click"/>
 
             <TextBlock HorizontalAlignment="right" Grid.Column="2" Grid.Row="6" TextWrapping="Wrap" Text="Files" Margin="10,4,10,0" VerticalAlignment="Top" FontSize="36"/>
-            <Button x:Name="filepickButton" Content="Select Files" Grid.Column="3" Height="auto" HorizontalAlignment="Left" Grid.Row="6" VerticalAlignment="Top" FontSize="24" Width="450" Click="filepickButton_Click"/>
+            <Button x:Name="filepickButton" Content="Select Files" Grid.Column="3" Height="auto" HorizontalAlignment="Stretch" Margin="-3,0,-3,0" Grid.Row="6" VerticalAlignment="Top" FontSize="24" Click="filepickButton_Click"/>
 
             <Controls:WatermarkTextBox x:Name="SubjectTextbox" HorizontalAlignment="Center" WatermarkText="Subject" Height="50" Grid.Row="0" Grid.Column="0" TextWrapping="NoWrap" Text="" VerticalAlignment="Top"  FontSize="24" Width="450" />
-            <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" WatermarkText="Details..." Height="300" Grid.Row="1" Grid.RowSpan="5" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Top" FontSize="24" Width="450" />
-            <Button x:Name="SaveButton" Content="Create Ticket" Grid.Column="0" FontSize="30" Width="300" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
+            <Controls:WatermarkTextBox x:Name="DescritionTextbox" AcceptsReturn="True" HorizontalAlignment="Center" Margin="0,0,0,15" WatermarkText="Details..." Grid.Row="1" Grid.RowSpan="6" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Stretch" FontSize="24" Width="450" />
+            <Button x:Name="SaveButton" Content="Create Ticket" HorizontalAlignment="Stretch" Grid.Column="0" FontSize="30" Margin="-3,0,-3,0" VerticalAlignment="Stretch" Grid.Row="7" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
             <ScrollViewer HorizontalAlignment="Left" Grid.Column="3" Grid.ColumnSpan="3" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" Grid.Row="7" Height="auto" VerticalAlignment="Top" Width="auto">
                 <TextBlock x:Name="SelectedFilesList" Width="450" HorizontalAlignment="Left" Height="auto" Margin="0,0,0,0" Grid.Row="7" TextWrapping="WrapWholeWords" FontSize="20" VerticalAlignment="Top"/>
             </ScrollViewer>
