--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -104,6 +104,11 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="20"/>
                     <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="20"/>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="20"/>
                 </Grid.ColumnDefinitions>
 
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="1" Margin="0,25,0,0" TextWrapping="Wrap" Text="Start" VerticalAlignment="Top" FontSize="30"/>
@@ -129,15 +134,12 @@
                     <TextBlock x:Name="EndTimeLabel" Grid.Column="0" FontSize="40" VerticalAlignment="Top" Margin="0,5,0,0" />
                     <telerikInput:RadTimePicker x:Name="EndTimePicker" Grid.Column="2" Height="50" Width="30" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" ValueChanged="EndTimePicker_ValueChanged" />
                 </Grid>
-                <TextBox x:Name="HoursTextBox" Margin="0,3,30,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
+                <TextBox x:Name="HoursTextBox" Margin="0,3,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
                 <TextBlock x:Name="ErrorHours" Grid.Column="9" HorizontalAlignment="Left" Margin="0 -50 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
+                <CheckBox Name="BillableBox" Content="Billable" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="1" Grid.Column="11" VerticalAlignment="Center" FontSize="20" IsChecked="True"/>
             </Grid>
-
-            <CheckBox Name="BillableBox" Content="Billable" HorizontalAlignment="Left" Margin="20,0,0,0" Grid.Row="5" Grid.Column="6" VerticalAlignment="Center" FontSize="20" IsChecked="True"/>
-
-
-            <Button Content="Save My Time" Margin="7,25,0,0" Grid.Column="0" HorizontalAlignment="Left" Grid.Row="7" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" Width="400" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
+            <Button Content="Save My Time" Margin="7,20,-3,0" Grid.Column="0" HorizontalAlignment="Stretch" Grid.Row="7" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
         </Grid>
         <VisualStateManager.VisualStateGroups>
 
