SD Respones2.png, SD Respones3.png SD Respones4.png, SD Transfer.png

--- a/SherpaDesk/AddResponse.xaml
+++ b/SherpaDesk/AddResponse.xaml
@@ -116,11 +116,11 @@
 
             <Button x:Name="filepickButton" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Content="Select Files" Height="50" Margin="0,0,0,0" Grid.Row="5" FontSize="24" Tapped="filepickButton_Tapped" />
 
-            <Button x:Name="SaveButton" Content="Add Response &amp; Update" Grid.Row="7" FontSize="30" Grid.ColumnSpan="5" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
+            <Button x:Name="SaveButton" Content="Add Response" Grid.Row="7" FontSize="30" Grid.ColumnSpan="3" Background="#FF2F9129" Tapped="SaveButton_Tapped" />
             <Button x:Name="SaveAndReopenButton" Content="Save &amp; ReOpen ticket" Grid.Row="7" FontSize="30" Grid.ColumnSpan="4" Background="#FF2F9129" Tapped="SaveAndReopenButton_Click" Visibility="Collapsed" />
-            <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="30" Grid.Row="7" Grid.ColumnSpan="3" Grid.Column="3" />
+            <CheckBox Name="HoldBox" Content="Place on Hold" FontSize="30" Padding="5,-8,0,0" Margin="0,3,0,0" Grid.Row="5" HorizontalAlignment="Right" Grid.ColumnSpan="3" Grid.Column="4" />
             <Button Name="SaveDoNotReopenLink" Content="Save but Do Not ReOpen" FontSize="30" Grid.Row="7" Grid.ColumnSpan="4" Grid.Column="0" Tapped="SaveDoNotReopenLink_Click" Margin="0,65,-3,-65" Visibility="Collapsed" />
-            <CheckBox Name="WaitingBox" Content="Waiting On Response" FontSize="30" Grid.Row="7" Grid.ColumnSpan="10" Grid.Column="6" Margin="30,0,0,0" />
+            <CheckBox Name="WaitingBox" Content="Waiting On Response" HorizontalAlignment="Right" Padding="5,-8,0,0" FontSize="30" Grid.Row="5" Grid.ColumnSpan="4" Grid.Column="7" Margin="30,3,0,0" />
         </Grid>
         <VisualStateManager.VisualStateGroups>
 
