--- a/SherpaDesk/AddTime.xaml
+++ b/SherpaDesk/AddTime.xaml
@@ -84,13 +84,13 @@
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="1" Grid.Column="4" Margin="0,25,0,0" TextWrapping="Wrap" Text="Task Type" VerticalAlignment="Top" FontSize="30"/>
-            <ComboBox Name="TaskTypeList" Grid.Column="4" Grid.Row="2" Grid.ColumnSpan="3" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="0,0,0,0" VerticalAlignment="Top">
+            <ComboBox Name="TaskTypeList" Grid.Column="4" Grid.Row="2" Grid.ColumnSpan="3" FontSize="24" HorizontalAlignment="Left" Width="400" Height="50" Margin="0,0,20,0" VerticalAlignment="Top">
             </ComboBox>
 
             <TextBlock HorizontalAlignment="left" Grid.Row="3" Grid.Column="0" Margin="10,25,0,0" TextWrapping="Wrap" Text="Notes" VerticalAlignment="Top" FontSize="30"/>
             <TextBox Name="NoteTextBox" AcceptsReturn="True" Margin="10,0,0,0" Grid.RowSpan="3" HorizontalAlignment="Center" Height="300" Grid.Row="4" TextWrapping="Wrap" Grid.Column="0" Text="" VerticalAlignment="Top" FontSize="24" Width="400" />
 
-            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="3" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28" Margin="1,0,0,0">
+            <Grid Style="{StaticResource LayoutRootStyle}" Grid.Column="2" Grid.ColumnSpan="5" Width="740" HorizontalAlignment="Left" Grid.RowSpan="3" Grid.Row="4" Background="#FF6B3B28" Margin="1,0,0,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="60"/>
                     <RowDefinition Height="60"/>
@@ -137,7 +137,7 @@
                 <TextBox x:Name="HoursTextBox" Margin="0,3,0,0" InputScope="NumberFullWidth" Text="0.00" HorizontalAlignment="Left" Height="48" Grid.Row="1" TextWrapping="Wrap" Grid.Column="9" VerticalAlignment="Top" FontSize="30" Width="130" />
                 <TextBlock HorizontalAlignment="left" Grid.Row="0" Grid.Column="9" Margin="0,25,0,0" TextWrapping="Wrap" Text="Hours" VerticalAlignment="Top" FontSize="30"/>
                 <TextBlock x:Name="ErrorHours" Grid.Column="9" HorizontalAlignment="Left" Margin="0 -50 0 0" Grid.Row="1" Height="50" VerticalAlignment="Top"/>
-                <CheckBox Name="BillableBox" Content="Billable" HorizontalAlignment="Left" Margin="0,0,0,0" Grid.Row="1" Grid.Column="11" VerticalAlignment="Center" FontSize="20" IsChecked="True"/>
+                <CheckBox Name="BillableBox" Content="Billable" Padding="2,-1,0,0" HorizontalAlignment="Left" Margin="0,0,0,4" Grid.Row="1" Grid.Column="11" VerticalAlignment="Center" FontSize="20" IsChecked="True"/>
             </Grid>
             <Button Content="Save My Time" Margin="7,20,-3,0" Grid.Column="0" HorizontalAlignment="Stretch" Grid.Row="7" VerticalAlignment="Top" Height="70" Grid.RowSpan="2" FontSize="36" Background="#FF2F9129" Click="Button_Click"/>
         </Grid>
