--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -359,7 +359,7 @@
                             <TextBlock x:Name="WorkpadLabel" MaxWidth="500" VerticalAlignment="Stretch" TextWrapping="WrapWholeWords" HorizontalAlignment="Left" Text="" Foreground="White" FontSize="20" />
                         </ScrollViewer>
                     </Grid>
-                    <ScrollViewer Height="540" VerticalScrollMode="Auto" Grid.Column="1" Margin="0,0,20,0" VerticalScrollBarVisibility="Auto" HorizontalScrollMode="Disabled" Width="auto">
+                    <ScrollViewer Height="540" VerticalScrollMode="Auto" VerticalAlignment="Top" Grid.Column="1" Margin="0,0,20,0" VerticalScrollBarVisibility="Auto" HorizontalScrollMode="Disabled" Width="auto">
                         <GridView x:Name="TicketDetailsList" Margin="0,0,40,0" HorizontalAlignment="Stretch" IsTapEnabled="False" ItemContainerStyle="{StaticResource GridViewItemStyle1}" Grid.Column="1" SelectionMode="None">
                             <GridView.ItemsPanel>
                                 <ItemsPanelTemplate>
@@ -370,7 +370,6 @@
                                 <DataTemplate>
                                     <Grid HorizontalAlignment="Stretch">
                                         <Grid.RowDefinitions>
-                                            <RowDefinition Height="auto" />
                                             <RowDefinition Height="auto" />
                                             <RowDefinition Height="auto" />
                                         </Grid.RowDefinitions>
@@ -386,8 +385,8 @@
                                             </Grid.ColumnDefinitions>
                                             <TextBlock FontSize="40" Text="{Binding FullName}" Foreground="White" />
                                         </Grid>                                        
-                                        <TextBlock Text="{Binding ResponseDateText}" HorizontalAlignment="Right" Grid.Column="2" Canvas.ZIndex="1" Grid.Row="1" Margin="0,-10,0,0" FontSize="18" Foreground="White" />
-                                        <TextBlock Text="{Binding NoteText}" HorizontalAlignment="Stretch" Width="500" TextWrapping="Wrap" Grid.ColumnSpan="3" Grid.Row="2" Margin="0,10,0,50" FontSize="18" Foreground="White" />
+                                        <TextBlock Text="{Binding ResponseDateText}" HorizontalAlignment="Left" Grid.Column="1" Margin="12,13,12,0" FontSize="18" Foreground="White" />
+                                        <TextBlock Text="{Binding NoteText}" HorizontalAlignment="Stretch" Width="500" TextWrapping="Wrap" Grid.ColumnSpan="2" Grid.Row="1" Margin="0,10,0,50" FontSize="18" Foreground="White" />
                                     </Grid>
                                 </DataTemplate>
                             </GridView.ItemTemplate>
