--- a/SherpaDesk/Transfer.xaml
+++ b/SherpaDesk/Transfer.xaml
@@ -66,7 +66,7 @@
                 <ComboBoxItem Content="Let the system choose" Tag="SystemChoose" IsSelected="True" />
             </ComboBox>
             <HyperlinkButton x:Name="TechnicianMeLink" Content="Me" Grid.Row="3" Grid.Column="4" Padding="0" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" FontSize="20" Foreground="White" Height="51" Tapped="TechnicianMeLink_Tapped" />
-            <CheckBox x:Name="MakeMeAlternateCheckBox" Content="Make Me an Alternate" Grid.Column="6" Grid.Row="3" FontSize="20" />
+            <CheckBox x:Name="MakeMeAlternateCheckBox" Content="Make Me an Alternate" Padding="5,0,0,0" Margin="0,0,0,4" Grid.Column="6" Grid.Row="3" FontSize="20" />
 
             <RadioButton Name="TransferToClassCheckBox" Grid.Row="4" Content="Transfer to Class" GroupName="Group2" FontSize="20" />
             <ComboBox x:Name="ClassList" Grid.Column="2" Grid.Row="4" FontSize="20" HorizontalAlignment="Left" Width="300" Height="50" Margin="0,0,0,0" VerticalAlignment="Top" />
